[project]
name = "lus-pipeline"
version = "0.1.0"
description = "Land Use Analyzer data pipeline: fetch public data, classify parcels, assign vulnerability tiers, build PMTiles."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "ATNI Climate" }]
dependencies = [
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=2.0",
    "httpx>=0.27",
    "requests>=2.32",
    "pydantic>=2.9",
]

[project.scripts]
lus-refresh = "lus_pipeline.refresh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lus_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
